--- a/sm_cds_netskope/manifest.json
+++ b/sm_cds_netskope/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "StealthMole",
+    "name": "StealthMole CDS",
     "id": "sm_cds_netskope",
     "version": "1.0.0",
     "description": "StealthMole CDS Plugin for Netskope",
