Updated to include pwd and host

--- a/stealthmole_cre/manifest.json
+++ b/stealthmole_cre/manifest.json
@@ -24,7 +24,7 @@
             "description": "Provide the Secret Key from StealthMole platform."
         },
         {
-            "label": "Search Keyword",
+            "label": "Search Domain",
             "key": "search_query",
             "type": "text",
             "default": "",
